--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Activity 1: Basic HTML Bio</title>
+  <title>Greg Wathen Bio</title>
 </head>
 
 <body>
@@ -11,25 +11,25 @@
 
   <img src="https://placehold.it/200x200" alt="Greg Wathen">
 
-  <p>"""Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque condimentum
-       sit amet nunc sit amet pellentesque. Integer sed dui id ante facilisis consectetur
-        vitae eget nibh. Sed sollicitudin lectus vitae est porta interdum. In dignissim 
-        diam et orci consequat semper. Duis ac nisi sit amet erat scelerisque porttitor 
-        a sed est. Suspendisse porttitor, nulla vel cursus faucibus, orci turpis interdum 
-        arcu, eget cursus eros nulla at elit. Pellentesque habitant morbi tristique senectus
-         et netus et malesuada fames ac turpis egestas. In pulvinar lacus arcu, id rutrum mi
-          iaculis vel. Suspendisse sit amet mattis erat. Pellentesque ornare tortor nec mauris
-           accumsan luctus. Donec ut consequat risus. Fusce sit amet placerat dolor. Sed arcu
-        nibh, convallis non tortor vel, iaculis porttitor sem. Praesent imperdiet pharetra
-         purus id consectetur. """</p>
-  <p>"""Duis at semper felis, eu vehicula diam. Donec at augue at purus tristique fermentum
-       vel et eros. Sed porttitor luctus rhoncus. Ut luctus quam ligula, vel consequat tellus
-        finibus at. Nulla a sem vitae purus luctus pretium eget ut neque. Maecenas sodales
-         magna at ipsum blandit tempus. Integer ac lacus sed odio ornare commodo id nec nibh.
-          Proin egestas rhoncus ipsum ac posuere. Etiam nec dui sit amet nisl dapibus consectetur
-           eget id quam. Phasellus tincidunt, dolor et vehicula finibus, urna nulla porttitor
-            lectus, quis vehicula tellus lectus nec urna. Morbi nec eros maximus, mollis sem
-             posuere, venenatis tellus. Proin sagittis dapibus ipsum id luctus."""</p>
+  <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque condimentum
+  sit amet nunc sit amet pellentesque. Integer sed dui id ante facilisis consectetur
+  vitae eget nibh. Sed sollicitudin lectus vitae est porta interdum. In dignissim 
+  diam et orci consequat semper. Duis ac nisi sit amet erat scelerisque porttitor 
+  a sed est. Suspendisse porttitor, nulla vel cursus faucibus, orci turpis interdum 
+  arcu, eget cursus eros nulla at elit. Pellentesque habitant morbi tristique senectus
+  et netus et malesuada fames ac turpis egestas. In pulvinar lacus arcu, id rutrum mi
+  iaculis vel. Suspendisse sit amet mattis erat. Pellentesque ornare tortor nec mauris
+  accumsan luctus. Donec ut consequat risus. Fusce sit amet placerat dolor. Sed arcu
+  nibh, convallis non tortor vel, iaculis porttitor sem. Praesent imperdiet pharetra
+  purus id consectetur. "</p>
+  <p>"Duis at semper felis, eu vehicula diam. Donec at augue at purus tristique fermentum
+  vel et eros. Sed porttitor luctus rhoncus. Ut luctus quam ligula, vel consequat tellus
+  finibus at. Nulla a sem vitae purus luctus pretium eget ut neque. Maecenas sodales
+  magna at ipsum blandit tempus. Integer ac lacus sed odio ornare commodo id nec nibh.
+  Proin egestas rhoncus ipsum ac posuere. Etiam nec dui sit amet nisl dapibus consectetur
+  eget id quam. Phasellus tincidunt, dolor et vehicula finibus, urna nulla porttitor
+  lectus, quis vehicula tellus lectus nec urna. Morbi nec eros maximus, mollis sem
+  posuere, venenatis tellus. Proin sagittis dapibus ipsum id luctus."</p>
 
   <ul>
     <li><strong>Email:</strong> <a href="#">wgwathen@gmail.com</a></li>
